--- a/src/components/CertificateGenerator.css
+++ b/src/components/CertificateGenerator.css
@@ -14,6 +14,7 @@
 .form {
   display: flex;
   flex-direction: column;
+  font-family: "Times New Roman", Times, serif;
   width: 300px;
   margin-bottom: 20px;
   margin-top: 30px;
@@ -60,11 +61,12 @@
 }
 
 .certificate-photo {
-  width: 146px;
-  height: 180px;
-  margin-top: 180px;
+  width: 119px;
+  height: 135px;
+  margin-top: -3px;
   margin-bottom: 2px;
-  border-radius: 5px;
+  margin-left: 535px;
+  border-radius: 8px;
 }
 
 .button {
@@ -82,67 +84,134 @@
   background-color: #45a049;
 }
 .certificate-text-name {
-  font-size: 30px;
-  margin-top: 387px;
+  font-size: 11px;
+  margin-top: 218px;
+  margin-right: 450px;
   font-weight: bold;
-  color: black;
-  font-family: "Poltawski Nowy", sans-serif;
   font-weight: 600;
   font-style: normal;
 }
 .certificate-text-field {
-  font-family: "Poltawski Nowy", sans-serif;
   font-weight: bold;
   font-size: 18px;
   color: #14297c;
   margin-top: 682px;
   margin-right: 261px;
 }
-.certificate-text-content {
-  font-family: "Poltawski Nowy", sans-serif;
-  font-size: 24px;
-  color: #14297c;
-  margin: 125px;
-  margin-top: 430px;
-  text-align: justify;
-  line-height: 30px;
-}
-.certificate-text-code {
-  font-size: 18px;
-  margin-top: 710px;
-  margin-right: 283px;
-  color: #14297c;
-  font-family: "Poltawski Nowy", sans-serif;
-  font-weight: 700;
-}
-.certificate-text-date {
-  font-size: 16px;
-  margin-top: 644px;
-  margin-left: -355px;
-  color: #14297c;
-  font-family: "Poltawski Nowy", sans-serif;
-  font-weight: 700;
-}
 .certificate-text-category {
-  font-size: 24px;
-  margin-top: 434px;
-  margin-left: 282px;
+  font-size: 11px;
+  margin-top: 218px;
+  margin-left: 212px;
   font-weight: bold;
-  color: #14297c;
-  font-family: "Poltawski Nowy", sans-serif;
   font-weight: 800;
   font-style: normal;
 }
-.span-category {
+.certificate-text-regno {
+  font-size: 11px;
+  margin-top: 278px;
+  margin-right: 450px;
   font-weight: bold;
+  font-weight: 800;
+  font-style: normal;
 }
-.span-content {
-  color: #efa91b;
+.certificate-text-institution {
+  font-size: 11px;
+  margin-top: 308px;
+  margin-right: -200px;
+  font-weight: bold;
+  font-weight: 800;
+  font-style: normal;
+}
+.certificate-text-admission {
+  font-size: 11px;
+  margin-top: 388px;
+  margin-right: 450px;
+  font-weight: bold;
+  font-weight: 800;
+  font-style: normal;
+}
+.certificate-start-date {
+  font-size: 11px;
+  margin-top: 388px;
+  margin-right: 3px;
+  font-weight: bold;
+  font-weight: 800;
+  font-style: normal;
+}
+.certificate-firstmark-text {
+  font-size: 14px;
+  margin-top: 513px;
+  margin-left: 510px;
+  /* font-weight: bold; */
+  font-weight: 300;
+  font-style: normal;
+}
+
+.certificate-firstmark-number {
+  font-size: 14px;
+  margin-top: 513px;
+  margin-left: 300px;
+  font-weight: 500;
+  font-style: normal;
+}
+.certificate-issue-date {
+  font-size: 11px;
+  margin-top: 388px;
+  margin-left: 430px;
+  font-weight: bold;
+  font-weight: 800;
+  font-style: normal;
+}
+.certificate-secondmark-text {
+  font-size: 13px;
+  margin-top: 548px;
+  margin-left: 510px;
+  font-weight: bold;
+  font-weight: 300;
+  font-style: normal;
+}
+.certificate-secondmark-number {
+  font-size: 13px;
+  margin-top: 548px;
+  margin-left: 300px;
+  font-weight: bold;
+  font-weight: 300;
+  font-style: normal;
+}
+.certificate-issue-grade {
+  font-size: 11px;
+  margin-top: 328px;
+  margin-right: 450px;
+  font-weight: bold;
+  font-weight: 800;
+  font-style: normal;
+}
+.certificate-total-number{
+  font-size: 13px;
+  margin-top: 710px;
+  margin-left: 300px;
+  font-weight: 300;
+  font-style: normal;
+}
+.certificate-total-grade{
+  font-size: 13px;
+  margin-top: 742px;
+  margin-left: 145px;
+  font-weight: 700;
+  font-style: normal;
+}
+.certificate-total-text{
+  font-size: 13px;
+  margin-top: 710px;
+  margin-left: 520px;
+  font-weight: 300;
+  font-style: normal;
 }
 .th-super {
-  font-size: 13px;
+  font-size: 11px;
   margin: 0px;
 }
+
 @media (max-width: 768px) {
   .container {
     width: 800px;
