--- a/src/components/CertificateGenerator.css
+++ b/src/components/CertificateGenerator.css
@@ -10,14 +10,17 @@
   margin-top: 20px;
   background-color: #ccc;
 }
-
-.form {
+tr{
   display: flex;
-  flex-direction: column;
+}
+.form {
+  /* display: flex;
+  flex-direction: column; */
   font-family: "Times New Roman", Times, serif;
   width: 300px;
   margin-bottom: 20px;
   margin-top: 30px;
+  margin-left: -420px;
 }
 
 .label {
@@ -26,10 +29,11 @@
 }
 
 .input {
-  width: 100%;
+  width: 350px;
   padding: 8px;
   margin-top: 5px;
   margin-bottom: 15px;
+  margin-right: 15px;
   border-radius: 4px;
   border: 1px solid #ccc;
   box-sizing: border-box;
@@ -83,91 +87,65 @@
 .button:hover {
   background-color: #45a049;
 }
-.certificate-text-name {
+.common-style{
   font-size: 11px;
-  margin-top: 218px;
-  margin-right: 450px;
   font-weight: bold;
-  font-weight: 600;
+  font-weight: 550;
+  letter-spacing: 1px;
   font-style: normal;
 }
-.certificate-text-field {
-  font-weight: bold;
-  font-size: 18px;
-  color: #14297c;
-  margin-top: 682px;
-  margin-right: 261px;
+.certificate-text-name {
+  margin-top: 222px;
+  margin-right: 450px;
 }
 .certificate-text-category {
-  font-size: 11px;
-  margin-top: 218px;
+  margin-top: 222px;
   margin-left: 212px;
-  font-weight: bold;
-  font-weight: 800;
-  font-style: normal;
 }
 .certificate-text-regno {
-  font-size: 11px;
   margin-top: 278px;
   margin-right: 450px;
-  font-weight: bold;
-  font-weight: 800;
-  font-style: normal;
 }
 .certificate-text-institution {
-  font-size: 11px;
   margin-top: 308px;
   margin-right: -200px;
-  font-weight: bold;
-  font-weight: 800;
-  font-style: normal;
 }
 .certificate-text-admission {
-  font-size: 11px;
   margin-top: 388px;
   margin-right: 450px;
-  font-weight: bold;
-  font-weight: 800;
-  font-style: normal;
 }
 .certificate-start-date {
-  font-size: 11px;
   margin-top: 388px;
-  margin-right: 3px;
-  font-weight: bold;
-  font-weight: 800;
-  font-style: normal;
+  margin-right:-1px;
 }
 .certificate-firstmark-text {
   font-size: 14px;
   margin-top: 513px;
   margin-left: 510px;
   /* font-weight: bold; */
-  font-weight: 300;
+  font-weight: 400;
   font-style: normal;
+  letter-spacing: 1px;
 }
 
 .certificate-firstmark-number {
   font-size: 14px;
   margin-top: 513px;
   margin-left: 300px;
-  font-weight: 500;
+  font-weight: 400;
   font-style: normal;
 }
 .certificate-issue-date {
-  font-size: 11px;
   margin-top: 388px;
-  margin-left: 430px;
-  font-weight: bold;
-  font-weight: 800;
-  font-style: normal;
+  margin-left: 440px;
 }
 .certificate-secondmark-text {
   font-size: 13px;
   margin-top: 548px;
   margin-left: 510px;
   font-weight: bold;
-  font-weight: 300;
+  font-weight: 400;
+  letter-spacing: 1px;
   font-style: normal;
 }
 .certificate-secondmark-number {
@@ -175,22 +153,18 @@
   margin-top: 548px;
   margin-left: 300px;
   font-weight: bold;
-  font-weight: 300;
+  font-weight: 400;
   font-style: normal;
 }
 .certificate-issue-grade {
-  font-size: 11px;
-  margin-top: 328px;
+  margin-top: 332px;
   margin-right: 450px;
-  font-weight: bold;
-  font-weight: 800;
-  font-style: normal;
 }
 .certificate-total-number{
   font-size: 13px;
   margin-top: 710px;
   margin-left: 300px;
-  font-weight: 300;
+  font-weight: 400;
   font-style: normal;
 }
 .certificate-total-grade{
@@ -201,11 +175,18 @@
   font-style: normal;
 }
 .certificate-total-text{
-  font-size: 13px;
+  font-size: 11.5px;
   margin-top: 710px;
-  margin-left: 520px;
-  font-weight: 300;
-  font-style: normal;
+  margin-left: 696px;
+  letter-spacing: 0.5px;
+  font-weight: 400;
+  width: 120px
+}
+.certificate-text-certificateNo{
+  font-size: 18px;
+  margin-top: 139px;
+  margin-right: 220px;
+  font-weight: 400;
 }
 .th-super {
   font-size: 11px;
